@@ -1,3 +1,6 @@
+Aug. 11 2011
+Added sprite removing callback.
+
 Aug. 8 2011
 Some artworks.
 
